--- a/New-Project-1.CSharp.csproj
+++ b/New-Project-1.CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Script\Combat\combatBuff.cs" />
     <Compile Include="Assets\Script\Combat\combatEffect.cs" />
     <Compile Include="Assets\Script\Combat\combatEnums.cs" />
+    <Compile Include="Assets\Script\Combat\combatGrid.cs" />
     <Compile Include="Assets\Script\Combat\combatManager.cs" />
     <Compile Include="Assets\Script\Combat\combatMove.cs" />
     <Compile Include="Assets\Script\Dialogue_Box.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="Assets\Script\Setting.cs" />
     <Compile Include="Assets\Script\dialogue.cs" />
     <Compile Include="Assets\Script\eventScript.cs" />
+    <Compile Include="Assets\unitInfoController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
