--- a/New-Project-1.CSharp.csproj
+++ b/New-Project-1.CSharp.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Assets\Script\Setting.cs" />
     <Compile Include="Assets\Script\dialogue.cs" />
     <Compile Include="Assets\Script\eventScript.cs" />
+    <Compile Include="Assets\combatUiController.cs" />
+    <Compile Include="Assets\moveButtonController.cs" />
+    <Compile Include="Assets\moveListController.cs" />
     <Compile Include="Assets\unitInfoController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
